# kernel-sidecar

./: CHANGELOG.md  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  publish.yaml  tests.yaml
docs/: index.md
search/: search_index.json
src/kernel_sidecar/: __init__.py  actions.py  cli.py  client.py  comms.py  handlers.py  kernel.py  log_utils.py  messages.py  nb_builder.py  settings.py
src/kernel_sidecar/handlers/: base.py  debug.py  output.py
src/kernel_sidecar/models/: messages.py  notebook.py  requests.py
tests/: conftest.py  test_actions.py  test_comms.py  test_kernel.py  test_logging.py  test_models.py  test_notebook_model.py  test_output_handler.py  test_version.py  test_zmq_disconnect.py
