[tool.poetry]
name = "kernel-sidecar"
version = "0.1.1"
description = "A sidecar "
authors = ["Matt Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"
license = "MIT"
packages = [{include = "kernel_sidecar", from = "src"}]
repository = "https://github.com/kafonek/kernel-sidecar"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100