[tool.poetry]
name = "kernel-sidecar"
version = "0.3.1"
description = "A sidecar "
authors = ["Matt Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"
license = "MIT"
packages = [{include = "kernel_sidecar", from = "src"}]
repository = "https://github.com/kafonek/kernel-sidecar"

[tool.poetry.dependencies]
python = "^3.8"
jupyter-client = ">=7.3.4"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
ipykernel = "^6.20.2"
notebook = "^6.5.2"
ipywidgets = "^8.0.4"
jupyterlab = "^3.6.1"
structlog = "^22.3.0"
pytest-rerunfailures = "^11.1.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]